--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
 body {
   margin: 0;
@@ -35,12 +35,16 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: calc(100vh / 10);
+  margin-top: calc(100vh / 20);
   text-align: center;
 }
 
 h1 {
   font-size: 50px;
+}
+
+.csce {
+  margin-bottom: -.5em;
 }
 
 h3 {
@@ -119,4 +123,23 @@ a {
 
 .lectures-list {
 
+}
+
+.lecture {
+  border-bottom: .1em solid#CC2E40;
+  margin-bottom: 1.5em;
+}
+
+.lecture-title {
+  font-size: 25px;
+}
+
+.lecture-references {
+  font-size: 15px;
+  color: #ffffff;
+}
+
+.lecture-date {
+  font-size: 12px;
+  color: #ffffff;
 }
